tests/semantic/union_types/union_types.err
Error: Unable to deduce type for variable X in file union_types.dl at line 24
E(X) :- F(X), A(X), B(X). // error
--^--------------------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 24
E(X) :- F(X), A(X), B(X). // error
----------^------------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 24
E(X) :- F(X), A(X), B(X). // error
----------------^------------------
Error: Unable to deduce type for variable X in file union_types.dl at line 24
E(X) :- F(X), A(X), B(X). // error
----------------------^------------
4 errors generated, evaluation aborted
